# GTMKit

./: DOCUMENTATION.md  README.md  pyproject.toml  pytest.ini
docs/: Makefile  build.py  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: gtm.rst  metrics.rst  plots.rst  utils.rst
docs/examples/: index.rst
docs/tutorials/: basic_gtm_training.rst  index.rst
src/gtmkit/: gtm.py
src/gtmkit/plots/: altair_landscapes.py
src/gtmkit/utils/: molecules.py
tests/: test_gtm_core.py  test_integration.py  test_utils.py
tutorials/: ChEMBL_data.ipynb  Synthetic_data.ipynb
tutorials/ChEMBLdata/: CHEMBL279_CLS.parquet
tutorials/ChEMBLdata/.ipynb_checkpoints/: target_protein_names-checkpoint.csv
tutorials/plots/: gtm_scurve_regression.html
